--- a/cal.html
+++ b/cal.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="icon" type="image/png" href="calculator.ico">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -39,4 +40,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
